# PersonalContextLayer

./: README.md  setup.py
.claude/: settings.local.json
agent/: behavioral_profile.py  embed.py  ingest.py  orchestrator.py  pyproject.toml  query.py
canvas-mcp/: pyproject.toml  server.py
context-mcp/: context_engine.py  live_updater.py  pyproject.toml  server.py  sources.json
course-websites-mcp/: pyproject.toml  server.py
demo/: agents.py  app.py  builder_app.py  mcp_client_example.py  platforms_app.py  universal_app.py
eval/: eval_suite.py
gcal-mcp/: README.md  auth.py  pyproject.toml  server.py  token.json.example
gmail-mcp./: README.md  auth.py  pyproject.toml  server.py  token.json.example
