[project]
name = "personal-agent"
version = "0.1.0"
description = "Personal agent ingestion, memory, and query pipeline"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.0",
    "sentence-transformers>=3.0.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.126.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.0",
    "rich>=13.0.0",
    "anthropic>=0.95.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "mcp>=1.27.2",
    "schedule>=1.2.2",
    "langchain-anthropic>=1.4.0",
    "langgraph>=1.2.4",
    "crewai>=1.6.1",
    "llama-index-core>=0.14.22",
    "llama-index-llms-anthropic>=0.11.5",
]
