[project]
name = "context-mcp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.27.0",
    "anthropic>=0.95",
    "chromadb>=0.6.0",
    "sentence-transformers>=3.0",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "python-dotenv>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
